// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hasRumDataQuery builds a tier restricted existence query 1`] = `
Object {
  "query": Object {
    "bool": Object {
      "filter": Array [
        Object {
          "bool": Object {
            "minimum_should_match": 1,
            "should": Array [
              Object {
                "bool": Object {
                  "filter": Array [
                    Object {
                      "term": Object {
                        "transaction.type": "page-load",
                      },
                    },
                    Object {
                      "term": Object {
                        "processor.event": "transaction",
                      },
                    },
                  ],
                },
              },
              Object {
                "term": Object {
                  "name": "documentLoad",
                },
              },
            ],
          },
        },
        Object {
          "terms": Object {
            "_tier": Array [
              "data_hot",
              "data_warm",
            ],
          },
        },
      ],
    },
  },
  "size": 0,
  "terminate_after": 1,
  "track_total_hits": 1,
}
`;

exports[`hasRumDataQuery builds an unrestricted existence query 1`] = `
Object {
  "query": Object {
    "bool": Object {
      "filter": Array [
        Object {
          "bool": Object {
            "minimum_should_match": 1,
            "should": Array [
              Object {
                "bool": Object {
                  "filter": Array [
                    Object {
                      "term": Object {
                        "transaction.type": "page-load",
                      },
                    },
                    Object {
                      "term": Object {
                        "processor.event": "transaction",
                      },
                    },
                  ],
                },
              },
              Object {
                "term": Object {
                  "name": "documentLoad",
                },
              },
            ],
          },
        },
      ],
    },
  },
  "size": 0,
  "terminate_after": 1,
  "track_total_hits": 1,
}
`;

exports[`hasRumDataWithServiceNameQuery builds a tier restricted query with a services aggregation 1`] = `
Object {
  "aggs": Object {
    "otelServices": Object {
      "aggs": Object {
        "mostTraffic": Object {
          "terms": Object {
            "field": "resource.attributes.service.name",
            "size": 1,
          },
        },
      },
      "filter": Object {
        "range": Object {
          "@timestamp": Object {
            "format": "epoch_millis",
            "gte": 0,
            "lte": 50000,
          },
        },
      },
    },
  },
  "query": Object {
    "bool": Object {
      "filter": Array [
        Object {
          "bool": Object {
            "minimum_should_match": 1,
            "should": Array [
              Object {
                "bool": Object {
                  "filter": Array [
                    Object {
                      "term": Object {
                        "transaction.type": "page-load",
                      },
                    },
                    Object {
                      "term": Object {
                        "processor.event": "transaction",
                      },
                    },
                  ],
                },
              },
              Object {
                "term": Object {
                  "name": "documentLoad",
                },
              },
            ],
          },
        },
        Object {
          "terms": Object {
            "_tier": Array [
              "data_hot",
              "data_warm",
            ],
          },
        },
      ],
    },
  },
  "size": 0,
}
`;

exports[`hasRumDataWithServiceNameQuery builds an unrestricted query with a services aggregation 1`] = `
Object {
  "aggs": Object {
    "otelServices": Object {
      "aggs": Object {
        "mostTraffic": Object {
          "terms": Object {
            "field": "resource.attributes.service.name",
            "size": 1,
          },
        },
      },
      "filter": Object {
        "range": Object {
          "@timestamp": Object {
            "format": "epoch_millis",
            "gte": 0,
            "lte": 50000,
          },
        },
      },
    },
  },
  "query": Object {
    "bool": Object {
      "filter": Array [
        Object {
          "bool": Object {
            "minimum_should_match": 1,
            "should": Array [
              Object {
                "bool": Object {
                  "filter": Array [
                    Object {
                      "term": Object {
                        "transaction.type": "page-load",
                      },
                    },
                    Object {
                      "term": Object {
                        "processor.event": "transaction",
                      },
                    },
                  ],
                },
              },
              Object {
                "term": Object {
                  "name": "documentLoad",
                },
              },
            ],
          },
        },
      ],
    },
  },
  "size": 0,
}
`;
